Fixed letter spacing on h1's, font sizes in show

--- a/app/assets/stylesheets/application.css.styl
+++ b/app/assets/stylesheets/application.css.styl
@@ -42,6 +42,7 @@ a {
 h1 {
   color: #999;
   font-size: 20px;
+  letter-spacing: -1px;
 }
 .top-nav {
   background: url("noise.png");
@@ -314,14 +315,14 @@ input[type=file] {
 }
 .single .post {
   left: -6px;
-  margin: 0 0 8px 0;
+  margin: 0 0 12px 0;
 }
 .single .post img {
   width: 400px;
 }
 .single h1 {
-  color: #616161;
-  font-size: 18px;
+  color: #595959;
+  font-size: 20px;
   margin: 0;
 }
 .single .details {
@@ -335,8 +336,9 @@ input[type=file] {
 }
 .single .by a,
 .single .comment a.user {
-  //////////////////////////
-}.single .by a {
+  font-size: 15px;
+}
+.single .by a {
   color: $textHlight;
 }
 .single .by a:hover {
